[package]
name = "statsdfusion"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.43", features = ["derive"] }
env_logger = { version = "0.11.8", features = ["humantime", "auto-color"] }
log = "0.4.27"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
